// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletChart Check onClick events 1`] = `
<DocumentFragment>
  <div
    style="font-family: var(--sapFontFamily); width: 100%; height: 400px; position: relative;"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="recharts-wrapper has-click-handler"
        style="position: relative; cursor: default; width: 400px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          height="400"
          version="1.1"
          viewBox="0 0 400 400"
          width="400"
        >
          <defs>
            <clippath
              id="recharts6-clip"
            >
              <rect
                height="330"
                width="340"
                x="30"
                y="20"
              />
            </clippath>
          </defs>
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="350"
                y2="350"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="267.5"
                y2="267.5"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="185"
                y2="185"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="102.5"
                y2="102.5"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="20"
                y2="20"
              />
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              type="category"
              width="340"
              x="30"
              x1="30"
              x2="370"
              y="350"
              y1="350"
              y2="350"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="44.166666666666664"
                  x2="44.166666666666664"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(44.166666666666664,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    January 2...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="72.5"
                  x2="72.5"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(72.5,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    February ...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="100.83333333333333"
                  x2="100.83333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(100.83333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    March 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="129.16666666666666"
                  x2="129.16666666666666"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(129.16666666666666,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    April 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="157.49999999999997"
                  x2="157.49999999999997"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(157.49999999999997,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    May 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="185.83333333333331"
                  x2="185.83333333333331"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(185.83333333333331,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    June 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="214.16666666666666"
                  x2="214.16666666666666"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(214.16666666666666,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    July 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="242.49999999999997"
                  x2="242.49999999999997"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(242.49999999999997,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    August 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="270.8333333333333"
                  x2="270.8333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(270.8333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    September...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="299.1666666666667"
                  x2="299.1666666666667"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(299.1666666666667,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    October 2...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="327.5"
                  x2="327.5"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(327.5,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    November ...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="355.8333333333333"
                  x2="355.8333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(355.8333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    December ...
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="350"
                  y2="350"
                />
                <g
                  transform="translate(22,353)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    0 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="267.5"
                  y2="267.5"
                />
                <g
                  transform="translate(22,270.5)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    350 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="185"
                  y2="185"
                />
                <g
                  transform="translate(22,188)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    700 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="102.5"
                  y2="102.5"
                />
                <g
                  transform="translate(22,105.5)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    1050 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="20"
                  y2="20"
                />
                <g
                  transform="translate(22,23)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    1400 sessions
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="29.833333333333336"
                    x2="57.833333333333336"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="58.166666666666664"
                    x2="86.16666666666666"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="86.49999999999999"
                    x2="114.49999999999999"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="114.83333333333333"
                    x2="142.83333333333331"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="143.16666666666666"
                    x2="171.16666666666666"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="171.5"
                    x2="199.5"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="199.83333333333334"
                    x2="227.83333333333334"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="228.16666666666666"
                    x2="256.16666666666663"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="256.49999999999994"
                    x2="284.49999999999994"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="284.8333333333333"
                    x2="312.8333333333333"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="313.16666666666663"
                    x2="341.16666666666663"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="341.49999999999994"
                    x2="369.49999999999994"
                    y1="350"
                    y2="350"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="recharts-legend-wrapper"
          style="position: absolute; width: 360px; height: auto; left: 10px; bottom: 20px; margin-left: 20px; max-width: calc(100% - 30px);"
        >
          <ul
            class="recharts-default-legend"
            style="padding: 0px; margin: 0px; text-align: left;"
          >
            <li
              class="recharts-legend-item legend-item-0"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="var(--sapChart_OrderedColor_1)"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
              >
                Vol.
              </span>
            </li>
            <li
              class="recharts-legend-item legend-item-1"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="var(--sapChart_OrderedColor_2)"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
              >
                Active Sessions
              </span>
            </li>
            <li
              class="recharts-legend-item legend-item-2"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="black"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
                style="color: black;"
              >
                Users
              </span>
            </li>
          </ul>
        </div>
        <div
          class="recharts-tooltip-wrapper"
          style="transform: translate(undefinedpx, undefinedpx); pointer-events: none; visibility: hidden; position: absolute; top: 0px; left: 0px;"
        >
          <div
            class="recharts-default-tooltip"
            style="margin: 0px; padding: 10px; border: 1px solid #ccc; white-space: nowrap;"
          >
            <p
              class="recharts-tooltip-label"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BulletChart Loading placeholder 1`] = `
<DocumentFragment>
  <div
    style="font-family: var(--sapFontFamily); width: 100%; height: 400px; position: relative;"
  >
    <svg
      aria-labelledby="TITLE_ARIA_ID"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 165 145"
      width="100%"
    >
      <title
        id="TITLE_ARIA_ID"
      >
        Loading...
      </title>
      <rect
        clip-path="STYLE-URL"
        height="100%"
        role="presentation"
        style="fill: STYLE-URL;"
        width="100%"
        x="0"
        y="0"
      />
      <defs>
        <clippath
          id="DIFF_ID"
        >
          <rect
            height="1"
            width="135"
            x="10"
            y="135"
          />
        </clippath>
        <lineargradient
          id="DIFF_ID"
        >
          <stop
            offset="0%"
            stop-color="var(--sapContent_ImagePlaceholderBackground)"
            stop-opacity="var(--sapContent_DisabledOpacity)"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="var(--sapContent_ImagePlaceholderForegroundColor)"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="var(--sapContent_ImagePlaceholderBackground)"
            stop-opacity="var(--sapContent_DisabledOpacity)"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BulletChart Render chart with data 1`] = `
<DocumentFragment>
  <div
    style="font-family: var(--sapFontFamily); width: 100%; height: 400px; position: relative;"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="recharts-wrapper"
        style="position: relative; cursor: default; width: 400px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          height="400"
          version="1.1"
          viewBox="0 0 400 400"
          width="400"
        >
          <defs>
            <clippath
              id="recharts1-clip"
            >
              <rect
                height="330"
                width="340"
                x="30"
                y="20"
              />
            </clippath>
          </defs>
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="350"
                y2="350"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="267.5"
                y2="267.5"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="185"
                y2="185"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="102.5"
                y2="102.5"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="20"
                y2="20"
              />
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              type="category"
              width="340"
              x="30"
              x1="30"
              x2="370"
              y="350"
              y1="350"
              y2="350"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="44.166666666666664"
                  x2="44.166666666666664"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(44.166666666666664,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    January 2...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="72.5"
                  x2="72.5"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(72.5,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    February ...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="100.83333333333333"
                  x2="100.83333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(100.83333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    March 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="129.16666666666666"
                  x2="129.16666666666666"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(129.16666666666666,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    April 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="157.49999999999997"
                  x2="157.49999999999997"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(157.49999999999997,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    May 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="185.83333333333331"
                  x2="185.83333333333331"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(185.83333333333331,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    June 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="214.16666666666666"
                  x2="214.16666666666666"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(214.16666666666666,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    July 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="242.49999999999997"
                  x2="242.49999999999997"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(242.49999999999997,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    August 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="270.8333333333333"
                  x2="270.8333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(270.8333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    September...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="299.1666666666667"
                  x2="299.1666666666667"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(299.1666666666667,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    October 2...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="327.5"
                  x2="327.5"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(327.5,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    November ...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="355.8333333333333"
                  x2="355.8333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(355.8333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    December ...
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="350"
                  y2="350"
                />
                <g
                  transform="translate(22,353)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    0 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="267.5"
                  y2="267.5"
                />
                <g
                  transform="translate(22,270.5)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    350 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="185"
                  y2="185"
                />
                <g
                  transform="translate(22,188)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    700 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="102.5"
                  y2="102.5"
                />
                <g
                  transform="translate(22,105.5)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    1050 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="20"
                  y2="20"
                />
                <g
                  transform="translate(22,23)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    1400 sessions
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="29.833333333333336"
                    x2="57.833333333333336"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="58.166666666666664"
                    x2="86.16666666666666"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="86.49999999999999"
                    x2="114.49999999999999"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="114.83333333333333"
                    x2="142.83333333333331"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="143.16666666666666"
                    x2="171.16666666666666"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="171.5"
                    x2="199.5"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="199.83333333333334"
                    x2="227.83333333333334"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="228.16666666666666"
                    x2="256.16666666666663"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="256.49999999999994"
                    x2="284.49999999999994"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="284.8333333333333"
                    x2="312.8333333333333"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="313.16666666666663"
                    x2="341.16666666666663"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="341.49999999999994"
                    x2="369.49999999999994"
                    y1="350"
                    y2="350"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="recharts-legend-wrapper"
          style="position: absolute; width: 360px; height: auto; left: 10px; bottom: 20px; margin-left: 20px; max-width: calc(100% - 30px);"
        >
          <ul
            class="recharts-default-legend"
            style="padding: 0px; margin: 0px; text-align: left;"
          >
            <li
              class="recharts-legend-item legend-item-0"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="var(--sapChart_OrderedColor_1)"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
              >
                Vol.
              </span>
            </li>
            <li
              class="recharts-legend-item legend-item-1"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="var(--sapChart_OrderedColor_2)"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
              >
                Active Sessions
              </span>
            </li>
            <li
              class="recharts-legend-item legend-item-2"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="black"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
                style="color: black;"
              >
                Users
              </span>
            </li>
          </ul>
        </div>
        <div
          class="recharts-tooltip-wrapper"
          style="transform: translate(undefinedpx, undefinedpx); pointer-events: none; visibility: hidden; position: absolute; top: 0px; left: 0px;"
        >
          <div
            class="recharts-default-tooltip"
            style="margin: 0px; padding: 10px; border: 1px solid #ccc; white-space: nowrap;"
          >
            <p
              class="recharts-tooltip-label"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BulletChart onLegendClick should not crash when invalid handler is provided 1`] = `
<DocumentFragment>
  <div
    style="font-family: var(--sapFontFamily); width: 100%; height: 400px; position: relative;"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="recharts-wrapper"
        style="position: relative; cursor: default; width: 400px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          height="400"
          version="1.1"
          viewBox="0 0 400 400"
          width="400"
        >
          <defs>
            <clippath
              id="recharts11-clip"
            >
              <rect
                height="330"
                width="340"
                x="30"
                y="20"
              />
            </clippath>
          </defs>
          <g
            class="recharts-cartesian-grid"
          >
            <g
              class="recharts-cartesian-grid-horizontal"
            >
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="350"
                y2="350"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="267.5"
                y2="267.5"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="185"
                y2="185"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="102.5"
                y2="102.5"
              />
              <line
                fill="none"
                height="330"
                offset="[object Object]"
                stroke="var(--sapList_BorderColor)"
                width="340"
                x="30"
                x1="30"
                x2="370"
                y="20"
                y1="20"
                y2="20"
              />
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              type="category"
              width="340"
              x="30"
              x1="30"
              x2="370"
              y="350"
              y1="350"
              y2="350"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="44.166666666666664"
                  x2="44.166666666666664"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(44.166666666666664,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    January 2...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="72.5"
                  x2="72.5"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(72.5,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    February ...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="100.83333333333333"
                  x2="100.83333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(100.83333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    March 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="129.16666666666666"
                  x2="129.16666666666666"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(129.16666666666666,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    April 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="157.49999999999997"
                  x2="157.49999999999997"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(157.49999999999997,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    May 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="185.83333333333331"
                  x2="185.83333333333331"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(185.83333333333331,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    June 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="214.16666666666666"
                  x2="214.16666666666666"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(214.16666666666666,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    July 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="242.49999999999997"
                  x2="242.49999999999997"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(242.49999999999997,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    August 2019
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="270.8333333333333"
                  x2="270.8333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(270.8333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    September...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="299.1666666666667"
                  x2="299.1666666666667"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(299.1666666666667,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    October 2...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="327.5"
                  x2="327.5"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(327.5,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    November ...
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  type="category"
                  width="340"
                  x="30"
                  x1="355.8333333333333"
                  x2="355.8333333333333"
                  y="350"
                  y1="356"
                  y2="350"
                />
                <g
                  style="direction: ltr;"
                  transform="translate(355.8333333333333,368)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                    transform="rotate(-35)"
                  >
                    December ...
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
          >
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="350"
                  y2="350"
                />
                <g
                  transform="translate(22,353)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    0 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="267.5"
                  y2="267.5"
                />
                <g
                  transform="translate(22,270.5)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    350 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="185"
                  y2="185"
                />
                <g
                  transform="translate(22,188)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    700 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="102.5"
                  y2="102.5"
                />
                <g
                  transform="translate(22,105.5)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    1050 sessions
                  </text>
                </g>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="330"
                  orientation="left"
                  stroke="transparent"
                  type="number"
                  width="20"
                  x="10"
                  x1="24"
                  x2="30"
                  y="20"
                  y1="20"
                  y2="20"
                />
                <g
                  transform="translate(22,23)"
                >
                  <text
                    fill="var(--sapContent_LabelColor)"
                    text-anchor="end"
                  >
                    1400 sessions
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
                <g
                  class="recharts-layer recharts-bar-rectangle"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-bar"
          >
            <g
              class="recharts-layer recharts-bar-rectangles"
            >
              <g
                class="recharts-layer"
              >
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="29.833333333333336"
                    x2="57.833333333333336"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="58.166666666666664"
                    x2="86.16666666666666"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="86.49999999999999"
                    x2="114.49999999999999"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="114.83333333333333"
                    x2="142.83333333333331"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="143.16666666666666"
                    x2="171.16666666666666"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="171.5"
                    x2="199.5"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="199.83333333333334"
                    x2="227.83333333333334"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="228.16666666666666"
                    x2="256.16666666666663"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="256.49999999999994"
                    x2="284.49999999999994"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="284.8333333333333"
                    x2="312.8333333333333"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="313.16666666666663"
                    x2="341.16666666666663"
                    y1="350"
                    y2="350"
                  />
                </g>
                <g
                  class="recharts-layer recharts-bar-rectangle"
                >
                  <line
                    stroke="black"
                    stroke-width="3"
                    x1="341.49999999999994"
                    x2="369.49999999999994"
                    y1="350"
                    y2="350"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="recharts-legend-wrapper"
          style="position: absolute; width: 360px; height: auto; left: 10px; bottom: 20px; margin-left: 20px; max-width: calc(100% - 30px);"
        >
          <ul
            class="recharts-default-legend"
            style="padding: 0px; margin: 0px; text-align: left;"
          >
            <li
              class="recharts-legend-item legend-item-0"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="var(--sapChart_OrderedColor_1)"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
              >
                Vol.
              </span>
            </li>
            <li
              class="recharts-legend-item legend-item-1"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="var(--sapChart_OrderedColor_2)"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
              >
                Active Sessions
              </span>
            </li>
            <li
              class="recharts-legend-item legend-item-2"
              style="display: inline-block; margin-right: 10px;"
            >
              <svg
                class="recharts-surface"
                height="14"
                style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                version="1.1"
                viewBox="0 0 32 32"
                width="14"
              >
                <path
                  class="recharts-legend-icon"
                  d="M0,4h32v24h-32z"
                  fill="black"
                  stroke="none"
                />
              </svg>
              <span
                class="recharts-legend-item-text"
                style="color: black;"
              >
                Users
              </span>
            </li>
          </ul>
        </div>
        <div
          class="recharts-tooltip-wrapper"
          style="transform: translate(undefinedpx, undefinedpx); pointer-events: none; visibility: hidden; position: absolute; top: 0px; left: 0px;"
        >
          <div
            class="recharts-default-tooltip"
            style="margin: 0px; padding: 10px; border: 1px solid #ccc; white-space: nowrap;"
          >
            <p
              class="recharts-tooltip-label"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
